
cmake_minimum_required(VERSION 2.6)

project(3dreconstruction)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${3dreconstruction_SOURCE_DIR}/cmake_modules)

# Find Eigen3
FIND_PACKAGE(Eigen3 3.2.0 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
MESSAGE(STATUS "Compiling with Eigen3")
MESSAGE(STATUS "\tEIGEN3_INCLUDE_DIR: " ${EIGEN3_INCLUDE_DIR})

# Find Opencv
FIND_PACKAGE(OpenCV 2.4.8 REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
MESSAGE(STATUS "Compiling with OpenCV")
MESSAGE(STATUS "\tOpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS})
MESSAGE(STATUS "\tOpenCV_LIBS: " ${OpenCV_LIBS})

# Find Nicp
FIND_PACKAGE(Nicp REQUIRED)
INCLUDE_DIRECTORIES(${NICP_INCLUDE_DIR})
MESSAGE(STATUS "Compiling with Nicp")
MESSAGE(STATUS "\tNICP_INCLUDE_DIR: " ${NICP_INCLUDE_DIR})
MESSAGE(STATUS "\tNICP_LIBRARY: " ${NICP_LIBRARY})
MESSAGE(STATUS "\tNICP_VIEWER_LIBRARY: " ${NICP_VIEWER_LIBRARY})

include_directories("include/")

ADD_DEFINITIONS(${PCL_DEFINITIONS})

file(GLOB SOURCES
    "source/*.*"
)

add_executable(${PROJECT_NAME} "source/main.cpp" ${SOURCES})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${NICP_LIBRARY})
